--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-#db.default.driver=org.postgresql.Driver
-#db.default.url="jdbc:postgres://localhost:5432/test"
-#db.default.user=guillaume
-#db.default.password=""
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost:5432/test"
+db.default.user=guillaume
+db.default.password=test
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
