Replace localhost by guillaume's ip

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/test"
+db.default.url="jdbc:postgresql://172.29.64.224:5432/test"
 db.default.user=guillaume
 db.default.password=test
 #
