--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://172.29.64.224:5432/test"
-db.default.user=guillaume
-db.default.password=test
+db.default.url="postgres://guillaume:test@172.29.64.224:5432/test"
+#db.default.user=guillaume
+#db.default.password=test
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
