--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="postgres://guillaume:test@172.29.64.224:5432/test"
+db.default.url="postgres://integration:integration@172.29.64.224:5432/integration"
 #db.default.user=guillaume
 #db.default.password=test
 #
